2003-09-22  Francois Felix Ingrand  <felix@ingrand.net>

	* README: creation...
	
$Id$