@@ -3,7 +3,7 @@
 #
 # $Id$
 #
-# Copyright (c) 1991-2001 Francois Felix Ingrand.
+# Copyright (c) 1991-2003 Francois Felix Ingrand.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -317,7 +317,7 @@ XDEFAULT = XOprs Ope
 
 XDEFAULT_LANG = XOprs-en.ad Ope-en.ad XOprs-fr.ad Ope-fr.ad
 
-UTIL = mkdep ad2c install.sh install-if-change.sh adlang2ad init-oprs-env vw-script
+UTIL = ad2c install.sh install-if-change.sh adlang2ad init-oprs-env vw-script
 
 
 ifeq ($(OPRS_LANG),fr)
