@@ -1,4 +1,11 @@
-OPENPRS-FTP-DIR = /usr/local/ftp/pub/ria/felix/openprs
+#
+# This Makefile should be called from ../..
+#
+#
+
+.DEFAULT:
+
+OPENPRS-FTP-DIR = dist-dir
 
 DOC-HTML = $(OPENPRS-FTP-DIR)/openprs-1.0b-doc-html.tgz
 
@@ -16,14 +23,17 @@ all: $(DOC-PDF) $(OPENPRS-REST) $(OPENPRS-SRC) $(README) $(INSTALL) $(LICENSE)\
 	 $(OPENPRS-FTP-DIR)/openprs-1.0b-sparc-solaris.tgz \
 	 $(OPENPRS-FTP-DIR)/openprs-1.0b-i386-linux.tgz
 
+dist: all
+	scp $(DOC-PDF) $(OPENPRS-REST) $(OPENPRS-SRC) $(README) $(INSTALL) $(LICENSE) $(OPENPRS-FTP-DIR)/openprs-1.0b-sparc-solaris.tgz $(OPENPRS-FTP-DIR)/openprs-1.0b-i386-linux.tgz rust:/var/ftp/pub/openrobots/openprs/
+
 $(DOC-PDF): doc/oprs.pdf
 	gnutar zcf $@ $^
 
-$(OPENPRS-REST): app-defaults contrib/include contrib/src data include pub_src util
-	gnutar zcf $@ $^
+$(OPENPRS-REST): app-defaults/* contrib/include/* contrib/src/* data/* include/* pub_src/* util/*
+	gnutar zcf $@ app-defaults contrib/include contrib/src data include pub_src util
 
-$(OPENPRS-SRC): src
-	gnutar zcf $@ $^
+$(OPENPRS-SRC): src/* src/*/*
+	gnutar zcf $@ src
 
 $(README): src/dist/README
 	cp $^ $@
@@ -35,7 +45,7 @@ $(INSTALL): src/dist/INSTALL
 	cp $^ $@
 
 $(OPENPRS-FTP-DIR)/openprs-1.0b-%.tgz: %/bin %/lib %/site.make contrib/%/lib
-	gnutar zvchf $@ $^
+	gnutar zchf $@ $^
 
 $(OPENPRS-FTP-DIR)/openprs-1.0b-%-vxworks.tgz: %-vxworks/lib %-vxworks/site.make contrib/%-vxworks/lib
-	gnutar zvchf $@ $^
+	gnutar zchf $@ $^
